# cmrc

./: CMakeLists.txt  CMakeRC.cmake  README.md  flower.cpp  main.cpp
example/: CMakeLists.txt  LICENSE.txt  README.txt  example.cpp
tests/: CMakeLists.txt  fileaccess.cpp  flower.cpp  iterate.cpp  simple.cpp  simple_raw_ptr.cpp  simple_string.cpp  simple_string_view.cpp
